# synthetic-code-gen-numpy

./: .gitignore  Dockerfile  README.md  analyze.py  analyze_input_generation.py  clean_rewrites.py  generate_inputs.py  generate_rewrites.py  main.py  print_rewrittend_code.py  pyproject.toml  test_rewrites.py
